Dockerise `file-backup-local` (via jib)